# 2.5D-Engine

./: CMakeLists.txt  Readme.md  proposal.md  run.sh
documentation/: documentation.md  proposal.md
include/: billboard.hpp  colors.hpp  directional_light.hpp  edge.hpp  face.hpp  game.hpp  map.hpp  mesh.hpp  model.hpp  pixel.hpp  player.hpp  point.hpp  quaternion.hpp  raycast.hpp  renderer.hpp  screen.hpp  screen_point.hpp  span.hpp  texture.hpp  tile.hpp  transform.hpp  triangle.hpp  uv_point.hpp  window_manager.hpp  worldpoint.hpp
resources/models/dice/: dice.mtl
src/: billboard.cpp  directional_light.cpp  edge.cpp  face.cpp  game.cpp  main.cpp  map.cpp  mesh.cpp  pixel.cpp  player.cpp  point.cpp  quaternion.cpp  raycast.cpp  renderer.cpp  screen.cpp  screen_point.cpp  screenpoint.cpp  span.cpp  texture.cpp  transform.cpp  triangle.cpp  uv_point.cpp  window_manager.cpp  world_point.cpp  worldpoint.cpp
tests/: CMakeLists.txt  test.cpp
